# LLMJudgeTempCausal

./: .gitignore  README.md  dag_temp_center.png.meta.json  exp_main.py  exp_main_batch.py  exp_main_batch_async.py  exp_main_batch_async_copy.py  exp_main_batch_async_supplementary.py  fake_llm_judgment_dataset.csv  main.py  pyproject.toml
input/: combined_dataset_with_reference_good_row_idx.json
notebook/: causal_analysis_combined.ipynb  causal_my.ipynb  datasets.ipynb  evaluate_case.ipynb  evaluate_case_huggingface.ipynb  evaluate_causality_analysis.ipynb  evaluate_causality_analysis_causalml.ipynb  evaluate_causality_analysis_continuous_treatment.ipynb  evaluate_causality_analysis_no_question_id.ipynb  evaluate_causality_analysis_no_question_id_better_plot.ipynb  evaluate_causality_analysis_no_question_id_good_plot copy.ipynb  evaluate_simularity.ipynb  evaluate_trend_case_study.ipynb  evaluation.ipynb  evaluation_Llama-3.1-8B-Instruct.ipynb  evaluation_Qwen3-30B-A3B-Instruct-2507.ipynb  evaluation_Qwen3-Next-80B-A3B-Instruct-FP8.ipynb  evaluation_Qwen__Qwen3-Next-80B-A3B-Thinking-FP8.ipynb  evaluation_back.ipynb  evaluation_gemma-3-27b-it.ipynb  temperature_causal_exploration.ipynb  test.ipynb  test_MMLU_pro_new.ipynb  test_causal.ipynb  test_main.ipynb
results_test/: analysis.json  consistency_orig.csv  consistency_swap.csv  metrics_by_temp_judgetype.csv  metrics_by_temp_model.csv  metrics_by_temp_prompt.csv  metrics_by_temperature.csv  results.csv
src/llmjudgetempcausal.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+25 files in other folders)
