[project]
name = "llmjudgetempcausal"
version = "0.1.0"
description = "Causal analysis of LLM-as-a-judge temperature effects on MT-Bench"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.0",
    "openai>=1.0",
    "jinja2>=3.1",
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "econml>=0.15",
    "pgmpy>=0.1.25",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "tqdm>=4.66",
    "click>=8.1",
    "vllm>=0.17.1",
    "dowhy>=0.14",
]

[project.scripts]
llmjudge = "llmjudgetempcausal.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
llmjudgetempcausal = ["assets/*.jinja"]
